[package]
name = "wyag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
flate2 = { version = "1.0" }
configparser = { version = "3.0.2" }
env_logger = { version = "0.9.1" }
ini = { version = "1.3.0" }
rust-crypto = { version = "0.2.36" }
